--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
     </div>
 
     <a class="go">wejdź</a>
+   
+    <button class="logout-btn" id="logoutBtn">Wyloguj się</button>
+   
     <div class="discord" onclick="window.open('https://discord.gg/8V4DFPZBfH')">
         <div class="inner_grid">
             <img class="discord_image" src="https://i.imgur.com/xcYtB71.png">
