--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <script>
         // Check if already logged in
         if (sessionStorage.getItem('authenticated') === 'true') {
-            window.location.href = 'index.html';
+            window.location.href = 'generator.html';
         }
 
         const loginForm = document.getElementById('loginForm');
@@ -170,7 +170,7 @@
                 sessionStorage.setItem('username', username);
                
                 // Redirect to generator
-                window.location.href = 'index.html';
+                window.location.href = 'generator.html';
             } else {
                 // Show error message
                 errorMessage.classList.add('show');
@@ -196,3 +196,4 @@
     </script>
 </body>
 </html>
+
